...
                .padding(.vertical, 4)

                HStack {
                    HoverButton("Add Proof", systemImage: "plus") {
                        ui.showAddProofSheet = true
                    }
                    .accessibilityIdentifier("add-proof-button")
                    .popover(isPresented: $ui.showAddProofSheet, arrowEdge: .top) {
                        AddProofPopover()
                    }
                    Spacer()
                }
                .padding(.horizontal, 8)
...
